bk_ida/gccida/g0/parmlist_tags_warning
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parmlist_tags_warning/src/c-decl.c:5911:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code code; // [rsp+4h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parmlist_tags_warning/src/c-decl.c:5946:7: error: use of undeclared identifier 'already_0'
if ( !already_0 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parmlist_tags_warning/src/c-decl.c:5949:1: error: use of undeclared identifier 'already_0'
already_0 = 1; 
^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/parmlist_tags_warning/src/obj/c-decl.o] Error 1
